--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "crypto-browserify": "^3.12.0",
     "next": "^13.2.3",
+    "next-pwa": "^5.6.0",
     "path-browserify": "^1.0.1",
     "platform": "^1.3.6",
     "qrcode": "^1.5.1",
